# VintageStoryCloudSave

./: .gitignore  BUILD.md  CLOUD_SAVE_PLAN.md  LICENSE  README.md  build.bat  build.sh
.github/workflows/: build.yml
cloud-save-uploader/: Cargo.toml  build.rs
cloud-save-uploader/src/: Uploadcore.rs  helper_functions.rs  main.rs  manifest_info.rs  upload_core.rs
vintage_cloud_uploader/: package.json  tailwind.config.js  tsconfig.json
vintage_cloud_uploader/src/: App.tsx  index.css  main.tsx
vintage_cloud_uploader/src-tauri/: .gitignore  Cargo.toml  ENV_SETUP.md  tauri.conf.json
vintage_cloud_uploader/src-tauri/src/: lib.rs  main.rs  manifest_info.rs  upload_core.rs
vintage_cloud_uploader/src/components/context/: manifestContext.tsx  uploadContext.tsx
vintage_cloud_uploader/src/components/dashboard/: BackupStats.tsx  FolderSelector.tsx  UploadProgress.tsx
vintage_cloud_uploader/src/lib/: types.ts
