[package]
name = "cloud-save-uploader"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.2"
egui = "0.33.2"
aws-config = { version = "1.5.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.38.0", features = ["rustls"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
protobuf = "3.4"